// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentProfileUnit component should render completed activities when showExactScores is false 1`] = `
<DocumentFragment>
  <div
    class="student-profile-unit undefined"
  >
    <div
      class="unit-name-and-staggered-release-status"
    >
      <h2
        class="unit-name"
      >
        Unit
      </h2>
      <span />
    </div>
    <div
      class="activities-container completed-activities"
    >
      <table
        class="data-table undefined"
      >
        <thead>
          <tr
            class="data-table-headers"
          >
            <th
              class="data-table-header name-section"
              scope="col"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <span>
                Activity
              </span>
            </th>
            <th
              class="data-table-header score-section tooltip-section"
              scope="col"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <span>
                Score
              </span>
            </th>
            <th
              class="data-table-header tool-icon-section"
              scope="col"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <span>
                Tool
              </span>
            </th>
            <th
              class="data-table-header completed-due-date-section"
              scope="col"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <span>
                Due date
              </span>
            </th>
            <th
              class="data-table-header completed-date-section"
              scope="col"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <span>
                Completed date
              </span>
            </th>
            <th
              class="data-table-header action-button-section tooltip-section"
              scope="col"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <span />
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              Capitalizing People, Places, & the Pronoun - Mixed Topics
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score"
              >
                <div
                  class="frequently-demonstrated-skill"
                />
                <span>
                  Frequently demonstrated skill
                </span>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <img
                alt="Puzzle piece representing Quill Grammar"
                src="undefined/images/icons/tool-grammar-gray.svg"
              />
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Mar 27, 5am
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Feb 22, 1:59pm
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Replay Capitalizing People, Places, & the Pronoun - Mixed Topics"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/8392402/activities/886"
              >
                Replay
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              Capitalizing Names of People & the Pronoun  - Mixed Topics
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score"
              >
                <div
                  class="frequently-demonstrated-skill"
                />
                <span>
                  Frequently demonstrated skill
                </span>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <img
                alt="Puzzle piece representing Quill Grammar"
                src="undefined/images/icons/tool-grammar-gray.svg"
              />
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Mar 27, 5am
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Feb 22, 1:59pm
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Replay Capitalizing Names of People & the Pronoun  - Mixed Topics"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/8392402/activities/885"
              >
                Replay
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              Capitalizing Names of People - Mixed Topics 1
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score"
              >
                <div
                  class="frequently-demonstrated-skill"
                />
                <span>
                  Frequently demonstrated skill
                </span>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <img
                alt="Puzzle piece representing Quill Grammar"
                src="undefined/images/icons/tool-grammar-gray.svg"
              />
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Mar 27, 5am
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Feb 22, 1:59pm
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Replay Capitalizing Names of People - Mixed Topics 1"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/8392402/activities/804"
              >
                Replay
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              Capitalizing Holidays, People, & Places - Mixed Topics
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score"
              >
                <div
                  class="frequently-demonstrated-skill"
                />
                <span>
                  Frequently demonstrated skill
                </span>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <img
                alt="Puzzle piece representing Quill Grammar"
                src="undefined/images/icons/tool-grammar-gray.svg"
              />
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Mar 27, 5am
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Feb 22, 1:59pm
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Replay Capitalizing Holidays, People, & Places - Mixed Topics"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/8392402/activities/887"
              >
                Replay
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              Capitalizing Dates & Holidays - Mixed Topics 1
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score"
              >
                <div
                  class="sometimes-demonstrated-skill"
                />
                <span>
                  Sometimes demonstrated skill
                </span>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <img
                alt="Puzzle piece representing Quill Grammar"
                src="undefined/images/icons/tool-grammar-gray.svg"
              />
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Mar 27, 5am
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Feb 22, 1:59pm
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Replay Capitalizing Dates & Holidays - Mixed Topics 1"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/8392402/activities/801"
              >
                Replay
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              Capitalizing Geographic Names - Mixed Topics 1
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score"
              >
                <div
                  class="sometimes-demonstrated-skill"
                />
                <span>
                  Sometimes demonstrated skill
                </span>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <img
                alt="Puzzle piece representing Quill Grammar"
                src="undefined/images/icons/tool-grammar-gray.svg"
              />
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Mar 27, 5am
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Feb 22, 1:59pm
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Replay Capitalizing Geographic Names - Mixed Topics 1"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/8392402/activities/802"
              >
                Replay
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              Capitalizing Geographic Names & Holidays - Mixed Topics
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score"
              >
                <div
                  class="rarely-demonstrated-skill"
                />
                <span>
                  Rarely demonstrated skill
                </span>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <img
                alt="Puzzle piece representing Quill Grammar"
                src="undefined/images/icons/tool-grammar-gray.svg"
              />
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Mar 27, 5am
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              Feb 22, 1:59pm
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Replay Capitalizing Geographic Names & Holidays - Mixed Topics"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/8392402/activities/181"
              >
                Replay
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StudentProfileUnit component should render completed activities when showExactScores is true 1`] = `
<DocumentFragment>
  <div
    class="student-profile-unit undefined"
  >
    <div
      class="unit-name-and-staggered-release-status"
    >
      <h2
        class="unit-name"
      >
        Unit
      </h2>
      <span />
    </div>
    <div
      class="activities-container completed-activities"
    >
      <table
        class="data-table undefined"
      >
        <thead>
          <tr
            class="data-table-headers"
          >
            <th
              class="data-table-header name-section"
              scope="col"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <span>
                Activity
              </span>
            </th>
            <th
              class="data-table-header score-section tooltip-section"
              scope="col"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <span>
                Score
              </span>
            </th>
            <th
              class="data-table-header tool-icon-section"
              scope="col"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <span>
                Tool
              </span>
            </th>
            <th
              class="data-table-header completed-due-date-section"
              scope="col"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <span>
                Due date
              </span>
            </th>
            <th
              class="data-table-header completed-date-section"
              scope="col"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <span>
                Completed date
              </span>
            </th>
            <th
              class="data-table-header action-button-section tooltip-section"
              scope="col"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <span />
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Capitalizing People, Places, & the Pronoun - Mixed Topics
              </div>
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <div
                  class="score"
                >
                  <div
                    class="frequently-demonstrated-skill"
                  />
                  <span>
                    <span>
                      10 of 10 (100%)
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <img
                  alt="Puzzle piece representing Quill Grammar"
                  src="undefined/images/icons/tool-grammar-gray.svg"
                />
              </div>
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Mar 27, 5am
              </div>
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Feb 22, 1:59pm
              </div>
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <a
                  aria-label="Replay Capitalizing People, Places, & the Pronoun - Mixed Topics"
                  class="quill-button medium focus-on-light secondary outlined"
                  href="/activity_sessions/classroom_units/8392402/activities/886"
                >
                  Replay
                </a>
              </div>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Capitalizing Names of People & the Pronoun  - Mixed Topics
              </div>
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <div
                  class="score"
                >
                  <div
                    class="frequently-demonstrated-skill"
                  />
                  <span>
                    <span>
                      10 of 10 (100%)
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <img
                  alt="Puzzle piece representing Quill Grammar"
                  src="undefined/images/icons/tool-grammar-gray.svg"
                />
              </div>
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Mar 27, 5am
              </div>
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Feb 22, 1:59pm
              </div>
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <a
                  aria-label="Replay Capitalizing Names of People & the Pronoun  - Mixed Topics"
                  class="quill-button medium focus-on-light secondary outlined"
                  href="/activity_sessions/classroom_units/8392402/activities/885"
                >
                  Replay
                </a>
              </div>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Capitalizing Names of People - Mixed Topics 1
              </div>
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <div
                  class="score"
                >
                  <div
                    class="frequently-demonstrated-skill"
                  />
                  <span>
                    <span>
                      10 of 10 (100%)
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <img
                  alt="Puzzle piece representing Quill Grammar"
                  src="undefined/images/icons/tool-grammar-gray.svg"
                />
              </div>
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Mar 27, 5am
              </div>
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Feb 22, 1:59pm
              </div>
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <a
                  aria-label="Replay Capitalizing Names of People - Mixed Topics 1"
                  class="quill-button medium focus-on-light secondary outlined"
                  href="/activity_sessions/classroom_units/8392402/activities/804"
                >
                  Replay
                </a>
              </div>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Capitalizing Holidays, People, & Places - Mixed Topics
              </div>
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <div
                  class="score"
                >
                  <div
                    class="frequently-demonstrated-skill"
                  />
                  <span>
                    <span>
                      9 of 10 (90%)
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <img
                  alt="Puzzle piece representing Quill Grammar"
                  src="undefined/images/icons/tool-grammar-gray.svg"
                />
              </div>
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Mar 27, 5am
              </div>
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Feb 22, 1:59pm
              </div>
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <a
                  aria-label="Replay Capitalizing Holidays, People, & Places - Mixed Topics"
                  class="quill-button medium focus-on-light secondary outlined"
                  href="/activity_sessions/classroom_units/8392402/activities/887"
                >
                  Replay
                </a>
              </div>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Capitalizing Dates & Holidays - Mixed Topics 1
              </div>
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <div
                  class="score"
                >
                  <div
                    class="sometimes-demonstrated-skill"
                  />
                  <span>
                    <span>
                      4 of 10 (40%)
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <img
                  alt="Puzzle piece representing Quill Grammar"
                  src="undefined/images/icons/tool-grammar-gray.svg"
                />
              </div>
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Mar 27, 5am
              </div>
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Feb 22, 1:59pm
              </div>
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <a
                  aria-label="Replay Capitalizing Dates & Holidays - Mixed Topics 1"
                  class="quill-button medium focus-on-light secondary outlined"
                  href="/activity_sessions/classroom_units/8392402/activities/801"
                >
                  Replay
                </a>
              </div>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Capitalizing Geographic Names - Mixed Topics 1
              </div>
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <div
                  class="score"
                >
                  <div
                    class="sometimes-demonstrated-skill"
                  />
                  <span>
                    <span>
                      4 of 10 (40%)
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <img
                  alt="Puzzle piece representing Quill Grammar"
                  src="undefined/images/icons/tool-grammar-gray.svg"
                />
              </div>
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Mar 27, 5am
              </div>
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Feb 22, 1:59pm
              </div>
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <a
                  aria-label="Replay Capitalizing Geographic Names - Mixed Topics 1"
                  class="quill-button medium focus-on-light secondary outlined"
                  href="/activity_sessions/classroom_units/8392402/activities/802"
                >
                  Replay
                </a>
              </div>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section tooltip-section"
              style="width: 474px; min-width: 474px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Capitalizing Geographic Names & Holidays - Mixed Topics
              </div>
            </td>
            <td
              class="data-table-row-section score-section tooltip-section"
              style="width: 230px; min-width: 230px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <div
                  class="score"
                >
                  <div
                    class="rarely-demonstrated-skill"
                  />
                  <span>
                    <span>
                      2 of 9 (22%)
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="data-table-row-section tool-icon-section tooltip-section"
              style="width: 24px; min-width: 24px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <img
                  alt="Puzzle piece representing Quill Grammar"
                  src="undefined/images/icons/tool-grammar-gray.svg"
                />
              </div>
            </td>
            <td
              class="data-table-row-section completed-due-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Mar 27, 5am
              </div>
            </td>
            <td
              class="data-table-row-section completed-date-section tooltip-section"
              style="width: 110px; min-width: 110px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                Feb 22, 1:59pm
              </div>
            </td>
            <td
              class="data-table-row-section action-button-section tooltip-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <div
                class="score-tooltip-activator"
              >
                <a
                  aria-label="Replay Capitalizing Geographic Names & Holidays - Mixed Topics"
                  class="quill-button medium focus-on-light secondary outlined"
                  href="/activity_sessions/classroom_units/8392402/activities/181"
                >
                  Replay
                </a>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StudentProfileUnit component should render incomplete activities 1`] = `
<DocumentFragment>
  <div
    class="student-profile-unit undefined"
  >
    <div
      class="unit-name-and-staggered-release-status"
    >
      <h2
        class="unit-name"
      >
        Unit
      </h2>
      <span />
    </div>
    <div
      class="activities-container incomplete-activities"
    >
      <table
        class="data-table undefined"
      >
        <thead>
          <tr
            class="data-table-headers"
          >
            <th
              class="data-table-header name-section"
              scope="col"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              <span>
                Activity
              </span>
            </th>
            <th
              class="data-table-header tool-icon-section"
              scope="col"
              style="width: 24px; min-width: 24px; text-align: right;"
            >
              <span>
                Tool
              </span>
            </th>
            <th
              class="data-table-header due-date-section"
              scope="col"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              <span>
                Due date
              </span>
            </th>
            <th
              class="data-table-header action-button-section"
              scope="col"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <span />
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              The Travels of Marco Polo
            </td>
            <td
              class="data-table-row-section tool-icon-section"
              style="width: 24px; min-width: 24px; text-align: right;"
            />
            <td
              class="data-table-row-section due-date-section"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              Feb 29, 5am
            </td>
            <td
              class="data-table-row-section action-button-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Start The Travels of Marco Polo"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/1/activities/608"
              >
                Start
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              Christopher Columbus
            </td>
            <td
              class="data-table-row-section tool-icon-section"
              style="width: 24px; min-width: 24px; text-align: right;"
            />
            <td
              class="data-table-row-section due-date-section"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              Feb 29, 5am
            </td>
            <td
              class="data-table-row-section action-button-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Start Christopher Columbus"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/1/activities/607"
              >
                Start
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              A, An, The
            </td>
            <td
              class="data-table-row-section tool-icon-section"
              style="width: 24px; min-width: 24px; text-align: right;"
            />
            <td
              class="data-table-row-section due-date-section"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              Feb 29, 5am
            </td>
            <td
              class="data-table-row-section action-button-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Start A, An, The"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/1/activities/140"
              >
                Start
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              Magellan
            </td>
            <td
              class="data-table-row-section tool-icon-section"
              style="width: 24px; min-width: 24px; text-align: right;"
            />
            <td
              class="data-table-row-section due-date-section"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              Feb 29, 5am
            </td>
            <td
              class="data-table-row-section action-button-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Start Magellan"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/1/activities/605"
              >
                Start
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              Jamestown
            </td>
            <td
              class="data-table-row-section tool-icon-section"
              style="width: 24px; min-width: 24px; text-align: right;"
            />
            <td
              class="data-table-row-section due-date-section"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              Feb 29, 5am
            </td>
            <td
              class="data-table-row-section action-button-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Start Jamestown"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/1/activities/606"
              >
                Start
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              Age of Exploration: Sailing with the Stars
            </td>
            <td
              class="data-table-row-section tool-icon-section"
              style="width: 24px; min-width: 24px; text-align: right;"
            />
            <td
              class="data-table-row-section due-date-section"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              Feb 29, 5am
            </td>
            <td
              class="data-table-row-section action-button-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Start Age of Exploration: Sailing with the Stars"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/1/activities/503"
              >
                Start
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              Age of Exploration: The Cape of Good Hope
            </td>
            <td
              class="data-table-row-section tool-icon-section"
              style="width: 24px; min-width: 24px; text-align: right;"
            />
            <td
              class="data-table-row-section due-date-section"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              Feb 29, 5am
            </td>
            <td
              class="data-table-row-section action-button-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Start Age of Exploration: The Cape of Good Hope"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/1/activities/504"
              >
                Start
              </a>
            </td>
          </tr>
          <tr
            class="data-table-row  "
          >
            <td
              class="data-table-row-section name-section"
              style="width: 823px; min-width: 823px; text-align: left;"
            >
              Age of Exploration: Roanoke
            </td>
            <td
              class="data-table-row-section tool-icon-section"
              style="width: 24px; min-width: 24px; text-align: right;"
            />
            <td
              class="data-table-row-section due-date-section"
              style="width: 100px; min-width: 100px; text-align: left;"
            >
              Feb 29, 5am
            </td>
            <td
              class="data-table-row-section action-button-section"
              style="width: 88px; min-width: 88px; text-align: left;"
            >
              <a
                aria-label="Start Age of Exploration: Roanoke"
                class="quill-button medium focus-on-light secondary outlined"
                href="/activity_sessions/classroom_units/1/activities/517"
              >
                Start
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
